# medigest_mobile

./: CNAME  README.md  dash.py  flet.yaml  index.html  pyproject.toml  requirements.txt
src/: main.py
src/database/: db_manager.py  models.py
src/screens/: abonnement_screen.py  add_product_screen.py  branch_switch_screen.py  cart_manager.py  cart_screen.py  cash_report_screen.py  config_screen.py  dashboard_details_screen.py  dashboard_screen.py  debt_screen.py  details_screen.py  duplicates_screen.py  edit_product_screen.py  expense_screen.py  export_screen.py  history_screen.py  inventory_screen.py  invoice_detail_screen.py  invoice_screen.py  login_screen.py  permission_screen.py  products_screen.py  receipt_export_screen.py  report_screen.py  return_exchange_screen.py  return_screen.py  sale_screen.py  stock_adjust_screen.py  stock_pdf_screen.py  stock_report_screen.py  sync_screen.py  user_management_screen.py
src/services/: api_service.py  auth_service.py  connection_manager.py  json_storage.py  notification_manager.py  permission_manager.py  storage_service.py  sync_service.py
src/ui/: sync_feedback_dialog.py
src/utils/: constants.py  paths.py  print_manager.py  subscription_blocker.py
